# cloog

./: .gitignore  .gitmodules  Makefile.am  autogen.sh  configure.ac
include/cloog/: options.h
include/cloog/polylib/: backend.h  cloog.h  domain.h  special.h  utilities.h
source/: loop.c  options.c  program.c
source/polylib/: constraintset.c  domain.c  special.c  utilities.c
test/: Makefile.am  check_polylib_special.sh  stride4.cloog
test/polylib/: 2D-split.c  2D-split.good.c  2D-split.scop  2D-tiled-split.c  2D-tiled-split.good.c  2D-tiled-split.scop  3D-split.c  3D-split.good.c  3D-split.scop
